tests/misc_errors/method.out
error: method.li 4,13: method `Num.f` is already defined
    4 | fn (n: Num) f() {}
      |             ^
error: method.li 7,1: function `Num.undefined` is not defined
    7 | n.undefined()
      | ^^^^^^^^^^^^^
